2004-10-10  Bruno Haible  <bruno@clisp.org>

	Prepare for non-standard methods.
	* clos-methcomb2.lisp (method-list-to-continuation): Use
	method-function instead of std-method-function.
	* disassem.lisp (disassemble@method): New method.

	Prepare for non-standard methods.
	* clos-genfun2.lisp (std-remove-method): Protect call to
	std-method-initfunction with a type check for <standard-method>.

	Prepare for non-standard methods.
	* clos-methcomb2.lisp (method-list-to-continuation,
	effective-method-code-bricks, build-effective-method-function-form):
	Protect all calls to std-method-fast-function,
	std-method-wants-next-method-p with a type check for <standard-method>.
	* clos-genfun2.lisp (std-add-method): Likewise.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Optimize type checks.
	* clos-class3.lisp (compute-slots-<slotted-class>-around): Use
	typep-class instead of typep.
	* clos-methcomb2.lisp (check-em-duplicates-option,
	callable-method-form-p, effective-method-code-bricks,
	build-effective-method-function-form): Likewise.
	* clos-genfun3.lisp (analyze-defgeneric): Likewise.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Respect user-defined methods on method-generic-function.
	* clos-genfun2.lisp (std-add-method): Call method-generic-function
	instead of std-method-generic-function.
	* clos-genfun3.lisp (%call-next-method): Likewise.
	* clos-genfun4.lisp (%no-next-method): Likewise.
	* clos-method3.lisp (method-generic-function): Redefine without
	fmakunbound.

	Respect user-defined methods on method-lambda-list.
	* clos-genfun2.lisp (check-signature-congruence, std-add-method,
	gf-keyword-arguments): Call method-signature instead of
	std-gf-signature.
	* clos-genfun3.lisp (defmethod): Likewise.
	* clos-method3.lisp (method-signature): Redefine without fmakunbound.
	(function-keywords): Call method-signature instead of std-gf-signature.
	* clos-class5.lisp (valid-initarg-keywords): Likewise.

	Respect user-defined methods on method-lambda-list.